@@ -2,7 +2,7 @@ package com.github.lkishalmi.gradle.gatling
 
 import org.gradle.api.Project
 
-class GatlingPluginExtension {
+class GatlingPluginExtension implements JvmConfigurable {
 
     static final String GATLING_MAIN_CLASS = 'io.gatling.app.Gatling'
 
@@ -14,31 +14,11 @@ class GatlingPluginExtension {
 
     static final String SCALA_VERSION = '2.12.8'
 
-    static final List<String> DEFAULT_JVM_ARGS = [
-        '-server',
-        '-Xmx1G',
-        '-XX:+HeapDumpOnOutOfMemoryError',
-        '-XX:+UseG1GC',
-        '-XX:MaxGCPauseMillis=30',
-        '-XX:G1HeapRegionSize=16m',
-        '-XX:InitiatingHeapOccupancyPercent=75',
-        '-XX:+ParallelRefProcEnabled',
-        '-XX:+PerfDisableSharedMem',
-        '-XX:+AggressiveOpts',
-        '-XX:+OptimizeStringConcat'
-    ]
-
-    static final Map DEFAULT_SYSTEM_PROPS = ["java.net.preferIPv4Stack": true, "java.net.preferIPv6Addresses": false]
-
     static final Closure DEFAULT_SIMULATIONS = { include("**/*Simulation*.scala") }
 
     def toolVersion = GATLING_TOOL_VERSION
 
     def scalaVersion = SCALA_VERSION
-
-    List<String> jvmArgs = DEFAULT_JVM_ARGS
-
-    Map systemProperties = DEFAULT_SYSTEM_PROPS
 
     Closure simulations = DEFAULT_SIMULATIONS
 
@@ -51,5 +31,7 @@ class GatlingPluginExtension {
 
     GatlingPluginExtension(Project project) {
         this.project = project
+        this.jvmArgs = DEFAULT_JVM_ARGS
+        this.systemProperties = DEFAULT_SYSTEM_PROPS
     }
 }
